--- a/PosMonitor/Pages/PositionMonitor.razor
+++ b/PosMonitor/Pages/PositionMonitor.razor
@@ -39,7 +39,7 @@ else
     protected override async Task OnInitializedAsync()
     {
         hubConnection = new HubConnectionBuilder()
-            .WithUrl(NavigationManager.ToAbsoluteUri("/positionspdatehub"))
+            .WithUrl(NavigationManager.ToAbsoluteUri("/positionsupdatehub"))
             .Build();
 
         hubConnection.On<Position[]>("updatepositions", async (data) =>
